--- a/src/components/geofence-list-item/geofence-list-item.html
+++ b/src/components/geofence-list-item/geofence-list-item.html
@@ -1,4 +1,9 @@
-<!-- Generated template for the GeofenceListItemComponent component -->
-<div>
-  {{text}}
-</div>
+<ion-item-sliding>
+  <ion-item (click)="itemTapped()">
+    <h2>{{header}}</h2>
+    <p>{{details}}</p>
+  </ion-item>
+  <ion-item-options>
+    <button ion-button (click)="remove(geofence)">Remove</button>
+  </ion-item-options>
+</ion-item-sliding>
